Fixing CRC reverse lookup

--- a/UI/dashboard.ui
+++ b/UI/dashboard.ui
@@ -27573,6 +27573,7 @@ p, li { white-space: pre-wrap; }
      <addaction name="actionOnline_Hex_Converter"/>
      <addaction name="actionBless"/>
      <addaction name="actionTriq_org"/>
+     <addaction name="actionCryptii"/>
     </widget>
     <widget class="QMenu" name="menuBluetooth">
      <property name="title">
@@ -29295,6 +29296,11 @@ p, li { white-space: pre-wrap; }
   <action name="actionAmateur_Satellite_Database">
    <property name="text">
     <string>Amateur Satellite Database</string>
+   </property>
+  </action>
+  <action name="actionCryptii">
+   <property name="text">
+    <string>cryptii</string>
    </property>
   </action>
  </widget>
