--- a/UI/dashboard.ui
+++ b/UI/dashboard.ui
@@ -27461,6 +27461,12 @@ p, li { white-space: pre-wrap; }
      <addaction name="actionGarage_Door_Transmit"/>
      <addaction name="actionGarage_Door_Cycle"/>
     </widget>
+    <widget class="QMenu" name="menuPOCSAG_2">
+     <property name="title">
+      <string>POCSAG</string>
+     </property>
+     <addaction name="actionPocsagtx"/>
+    </widget>
     <addaction name="menuStandalone802_11"/>
     <addaction name="menuStandaloneACARS"/>
     <addaction name="menuStandaloneClapper_Plus"/>
@@ -27471,6 +27477,7 @@ p, li { white-space: pre-wrap; }
     <addaction name="menuStandaloneJ2497"/>
     <addaction name="menuStandaloneMorse_Code"/>
     <addaction name="menuStandalonePainting"/>
+    <addaction name="menuPOCSAG_2"/>
     <addaction name="menuStandaloneRDS"/>
     <addaction name="menuStandaloneTPMS"/>
     <addaction name="menuStandaloneX10"/>
@@ -27575,6 +27582,8 @@ p, li { white-space: pre-wrap; }
      <addaction name="actionBless"/>
      <addaction name="actionTriq_org"/>
      <addaction name="actionCryptii"/>
+     <addaction name="actionMeld"/>
+     <addaction name="actionWaveDrom"/>
     </widget>
     <widget class="QMenu" name="menuBluetooth">
      <property name="title">
@@ -27600,6 +27609,7 @@ p, li { white-space: pre-wrap; }
      <addaction name="actionL2ping"/>
      <addaction name="actionBtscanner"/>
      <addaction name="actionHcidump"/>
+     <addaction name="actionICE9_Bluetooth_Sniffer"/>
     </widget>
     <widget class="QMenu" name="menuZ_Wave">
      <property name="title">
@@ -27645,6 +27655,7 @@ p, li { white-space: pre-wrap; }
      <addaction name="actionDump1090"/>
      <addaction name="actionGr_air_modes"/>
      <addaction name="menuTrackers"/>
+     <addaction name="actionDump978"/>
     </widget>
     <widget class="QMenu" name="menuLTE">
      <property name="title">
@@ -27677,19 +27688,28 @@ p, li { white-space: pre-wrap; }
       <addaction name="actionRadioQTH_Available_Call_Signs"/>
       <addaction name="actionAE7Q_Available_Call_Signs"/>
      </widget>
-     <addaction name="actionHam2mon"/>
-     <addaction name="actionWSJT_X"/>
-     <addaction name="actionWSPRnet_Map"/>
-     <addaction name="actionEvery_Time_Zone"/>
-     <addaction name="actionGoogle_Maps_APRS"/>
-     <addaction name="actionAPRS_multimon_ng"/>
+     <widget class="QMenu" name="menuAPRS">
+      <property name="title">
+       <string>APRS</string>
+      </property>
+      <addaction name="actionGoogle_Maps_APRS"/>
+      <addaction name="actionAPRS_multimon_ng"/>
+      <addaction name="actionDire_Wolf"/>
+     </widget>
+     <addaction name="menuAPRS"/>
      <addaction name="menuExam"/>
-     <addaction name="actionLicense_Search"/>
      <addaction name="actionEchoLink_Link_Status"/>
-     <addaction name="actionSolarHam"/>
+     <addaction name="actionEvery_Time_Zone"/>
      <addaction name="actionFldigi"/>
+     <addaction name="actionHam2mon"/>
+     <addaction name="actionHamClock"/>
+     <addaction name="actionHfpropagation_com"/>
+     <addaction name="actionLicense_Search"/>
      <addaction name="actionMorse_Code_Translator"/>
      <addaction name="actionPSK_Reporter"/>
+     <addaction name="actionSolarHam"/>
+     <addaction name="actionWSJT_X"/>
+     <addaction name="actionWSPRnet_Map"/>
     </widget>
     <widget class="QMenu" name="menuTPMS">
      <property name="title">
@@ -29313,6 +29333,46 @@ p, li { white-space: pre-wrap; }
   <action name="actionInspection_Flow_Graphs">
    <property name="text">
     <string>Inspection Flow Graphs</string>
+   </property>
+  </action>
+  <action name="actionMeld">
+   <property name="text">
+    <string>Meld</string>
+   </property>
+  </action>
+  <action name="actionDire_Wolf">
+   <property name="text">
+    <string>Dire Wolf</string>
+   </property>
+  </action>
+  <action name="actionHfpropagation_com">
+   <property name="text">
+    <string>hfpropagation.com</string>
+   </property>
+  </action>
+  <action name="actionWaveDrom">
+   <property name="text">
+    <string>WaveDrom</string>
+   </property>
+  </action>
+  <action name="actionHamClock">
+   <property name="text">
+    <string>HamClock</string>
+   </property>
+  </action>
+  <action name="actionICE9_Bluetooth_Sniffer">
+   <property name="text">
+    <string>ICE9 Bluetooth Sniffer</string>
+   </property>
+  </action>
+  <action name="actionPocsagtx">
+   <property name="text">
+    <string>pocsagtx</string>
+   </property>
+  </action>
+  <action name="actionDump978">
+   <property name="text">
+    <string>dump978</string>
    </property>
   </action>
  </widget>
