--- a/UI/dashboard.ui
+++ b/UI/dashboard.ui
@@ -27584,6 +27584,7 @@ p, li { white-space: pre-wrap; }
      <addaction name="actionCryptii"/>
      <addaction name="actionMeld"/>
      <addaction name="actionWaveDrom"/>
+     <addaction name="actionIQEngine"/>
     </widget>
     <widget class="QMenu" name="menuBluetooth">
      <property name="title">
@@ -27638,9 +27639,9 @@ p, li { white-space: pre-wrap; }
      <addaction name="actionPySim_read"/>
      <addaction name="actionPySim_prog"/>
     </widget>
-    <widget class="QMenu" name="menuMode_S">
+    <widget class="QMenu" name="menuAircraft">
      <property name="title">
-      <string>Mode S</string>
+      <string>Aircraft</string>
      </property>
      <widget class="QMenu" name="menuTrackers">
       <property name="title">
@@ -27651,6 +27652,8 @@ p, li { white-space: pre-wrap; }
       <addaction name="actionFlightStats"/>
       <addaction name="actionPlane_Finder"/>
       <addaction name="actionADS_B_Exchange"/>
+      <addaction name="actionAcars_adsbexchange"/>
+      <addaction name="actionAirframes"/>
      </widget>
      <addaction name="actionDump1090"/>
      <addaction name="actionGr_air_modes"/>
@@ -27783,6 +27786,7 @@ p, li { white-space: pre-wrap; }
      <addaction name="actionProxmark3"/>
      <addaction name="actionProxmark3_Cheatsheet"/>
      <addaction name="actionZEPASSD"/>
+     <addaction name="actionRfidpics"/>
     </widget>
     <widget class="QMenu" name="menuSatellite">
      <property name="title">
@@ -27904,6 +27908,7 @@ p, li { white-space: pre-wrap; }
     </widget>
     <addaction name="menu433_MHz"/>
     <addaction name="menu802_11_Tools_2"/>
+    <addaction name="menuAircraft"/>
     <addaction name="menuAIS"/>
     <addaction name="menuAM_Radio"/>
     <addaction name="menuAudio"/>
@@ -27917,7 +27922,6 @@ p, li { white-space: pre-wrap; }
     <addaction name="menuHD_Radio"/>
     <addaction name="menuLTE"/>
     <addaction name="menuMapping"/>
-    <addaction name="menuMode_S"/>
     <addaction name="menuPOCSAG"/>
     <addaction name="menuPoint_to_Point"/>
     <addaction name="menuRadiosonde"/>
@@ -29373,6 +29377,26 @@ p, li { white-space: pre-wrap; }
   <action name="actionDump978">
    <property name="text">
     <string>dump978</string>
+   </property>
+  </action>
+  <action name="actionIQEngine">
+   <property name="text">
+    <string>IQEngine</string>
+   </property>
+  </action>
+  <action name="actionRfidpics">
+   <property name="text">
+    <string>rfidpics</string>
+   </property>
+  </action>
+  <action name="actionAcars_adsbexchange">
+   <property name="text">
+    <string>acars.adsbexchange</string>
+   </property>
+  </action>
+  <action name="actionAirframes">
+   <property name="text">
+    <string>Airframes</string>
    </property>
   </action>
  </widget>
