--- a/UI/install2.ui
+++ b/UI/install2.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>920</width>
-    <height>600</height>
+    <height>630</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,7 +17,7 @@
    <property name="geometry">
     <rect>
      <x>465</x>
-     <y>560</y>
+     <y>590</y>
      <width>90</width>
      <height>27</height>
     </rect>
@@ -30,7 +30,7 @@
    <property name="geometry">
     <rect>
      <x>365</x>
-     <y>560</y>
+     <y>590</y>
      <width>90</width>
      <height>27</height>
     </rect>
@@ -161,7 +161,7 @@
    <property name="geometry">
     <rect>
      <x>235</x>
-     <y>530</y>
+     <y>560</y>
      <width>450</width>
      <height>20</height>
     </rect>
@@ -229,6 +229,48 @@ QTreeWidget#treeWidget_software {
     <string>Rankings</string>
    </property>
   </widget>
+  <widget class="QPushButton" name="pushButton_expand_all">
+   <property name="geometry">
+    <rect>
+     <x>25</x>
+     <y>520</y>
+     <width>100</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Expand All</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_collapse_all">
+   <property name="geometry">
+    <rect>
+     <x>135</x>
+     <y>520</y>
+     <width>100</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Collapse All</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_current_item">
+   <property name="geometry">
+    <rect>
+     <x>260</x>
+     <y>540</y>
+     <width>400</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
   <zorder>pushButton_ok</zorder>
   <zorder>pushButton_cancel</zorder>
   <zorder>pushButton_default</zorder>
@@ -239,6 +281,9 @@ QTreeWidget#treeWidget_software {
   <zorder>treeWidget_software</zorder>
   <zorder>label1</zorder>
   <zorder>pushButton_rankings</zorder>
+  <zorder>pushButton_expand_all</zorder>
+  <zorder>pushButton_collapse_all</zorder>
+  <zorder>label_current_item</zorder>
  </widget>
  <resources/>
  <connections/>
