--- a/UI/dashboard.ui
+++ b/UI/dashboard.ui
@@ -22110,6 +22110,9 @@ p, li { white-space: pre-wrap; }
                 <pointsize>10</pointsize>
                </font>
               </property>
+              <property name="selectionMode">
+               <enum>QAbstractItemView::SingleSelection</enum>
+              </property>
               <property name="selectionBehavior">
                <enum>QAbstractItemView::SelectRows</enum>
               </property>
@@ -22302,8 +22305,8 @@ p, li { white-space: pre-wrap; }
              <widget class="QPushButton" name="pushButton_archive_replay_add">
               <property name="geometry">
                <rect>
-                <x>15</x>
-                <y>767</y>
+                <x>10</x>
+                <y>740</y>
                 <width>100</width>
                 <height>27</height>
                </rect>
@@ -22315,8 +22318,8 @@ p, li { white-space: pre-wrap; }
              <widget class="QPushButton" name="pushButton_archive_replay_remove">
               <property name="geometry">
                <rect>
-                <x>120</x>
-                <y>767</y>
+                <x>325</x>
+                <y>740</y>
                 <width>100</width>
                 <height>27</height>
                </rect>
@@ -22328,8 +22331,8 @@ p, li { white-space: pre-wrap; }
              <widget class="QPushButton" name="pushButton_archive_replay_up">
               <property name="geometry">
                <rect>
-                <x>280</x>
-                <y>767</y>
+                <x>535</x>
+                <y>740</y>
                 <width>100</width>
                 <height>27</height>
                </rect>
@@ -22341,8 +22344,8 @@ p, li { white-space: pre-wrap; }
              <widget class="QPushButton" name="pushButton_archive_replay_down">
               <property name="geometry">
                <rect>
-                <x>385</x>
-                <y>767</y>
+                <x>640</x>
+                <y>740</y>
                 <width>100</width>
                 <height>27</height>
                </rect>
@@ -22354,10 +22357,10 @@ p, li { white-space: pre-wrap; }
              <widget class="QCheckBox" name="checkBox_archive_replay_repeat">
               <property name="geometry">
                <rect>
-                <x>545</x>
-                <y>770</y>
-                <width>97</width>
-                <height>22</height>
+                <x>755</x>
+                <y>740</y>
+                <width>85</width>
+                <height>27</height>
                </rect>
               </property>
               <property name="font">
@@ -22375,8 +22378,8 @@ p, li { white-space: pre-wrap; }
               </property>
               <property name="geometry">
                <rect>
-                <x>685</x>
-                <y>767</y>
+                <x>780</x>
+                <y>775</y>
                 <width>100</width>
                 <height>27</height>
                </rect>
@@ -22388,8 +22391,8 @@ p, li { white-space: pre-wrap; }
              <widget class="QLabel" name="label_archive_replay_status">
               <property name="geometry">
                <rect>
-                <x>795</x>
-                <y>772</y>
+                <x>695</x>
+                <y>780</y>
                 <width>80</width>
                 <height>17</height>
                </rect>
@@ -22409,7 +22412,7 @@ p, li { white-space: pre-wrap; }
                 <x>5</x>
                 <y>30</y>
                 <width>890</width>
-                <height>720</height>
+                <height>700</height>
                </rect>
               </property>
               <property name="font">
@@ -22419,6 +22422,9 @@ p, li { white-space: pre-wrap; }
               </property>
               <property name="styleSheet">
                <string notr="true"/>
+              </property>
+              <property name="selectionMode">
+               <enum>QAbstractItemView::SingleSelection</enum>
               </property>
               <property name="selectionBehavior">
                <enum>QAbstractItemView::SelectRows</enum>
@@ -22551,6 +22557,45 @@ p, li { white-space: pre-wrap; }
                </property>
               </column>
              </widget>
+             <widget class="QPushButton" name="pushButton_archive_replay_export_csv">
+              <property name="geometry">
+               <rect>
+                <x>220</x>
+                <y>740</y>
+                <width>100</width>
+                <height>27</height>
+               </rect>
+              </property>
+              <property name="text">
+               <string>Export CSV</string>
+              </property>
+             </widget>
+             <widget class="QPushButton" name="pushButton_archive_replay_import_csv">
+              <property name="geometry">
+               <rect>
+                <x>115</x>
+                <y>740</y>
+                <width>100</width>
+                <height>27</height>
+               </rect>
+              </property>
+              <property name="text">
+               <string>Import CSV</string>
+              </property>
+             </widget>
+             <widget class="QPushButton" name="pushButton_archive_replay_remove_all">
+              <property name="geometry">
+               <rect>
+                <x>430</x>
+                <y>740</y>
+                <width>100</width>
+                <height>27</height>
+               </rect>
+              </property>
+              <property name="text">
+               <string>Remove All</string>
+              </property>
+             </widget>
             </widget>
             <widget class="QWidget" name="tab_5">
              <attribute name="title">
@@ -22572,6 +22617,9 @@ p, li { white-space: pre-wrap; }
               </property>
               <property name="styleSheet">
                <string notr="true"/>
+              </property>
+              <property name="selectionMode">
+               <enum>QAbstractItemView::SingleSelection</enum>
               </property>
               <property name="selectionBehavior">
                <enum>QAbstractItemView::SelectRows</enum>
